--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Perpetua Chinedu Asogwa
 #logo:
 description: Data Analyst/Tecch Savvy
 show_downloads: true
-theme: https://pages-themes.github.io/minimal/
+theme: jekyll-theme-minimal
